monitoring/alertmanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
spec:
  selector:
    app.kubernetes.io/name: alertmanager
  ports:
    - name: http
      port: 9093
      targetPort: http
