monitoring/alertmanager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
spec:
  ingressClassName: traefik
  rules:
    - host: alertmanager.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alertmanager
                port:
                  name: http
